SigmaCodebackup3rdSep/objects/Manufacturing_Run_Inventory_Location__c.object
<CustomObject>
    <fields>
        <fullName>Inventory_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Manufacturing Run Inventory Locations</relationshipLabel>
        <relationshipName>Manufacturing_Run_Inventory_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Sublevel_Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Sublevel Zone</label>
        <referenceTo>Sublevel_location__c</referenceTo>
        <relationshipLabel>Manufacturing Run Inventory Locations (Location Sublevel Zone)</relationshipLabel>
        <relationshipName>Manufacturing_Run_Inventory_Locations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Sublevel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Sublevel</label>
        <referenceTo>Sublevel_location__c</referenceTo>
        <relationshipLabel>Manufacturing Run Inventory Locations</relationshipLabel>
        <relationshipName>Manufacturing_Run_Inventory_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Run__c</fullName>
        <label>Manufacturing Run</label>
        <referenceTo>Manufacturing_Run__c</referenceTo>
        <relationshipLabel>Manufacturing Run Inventory Locations</relationshipLabel>
        <relationshipName>Manufacturing_Run_Inventory_Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Moved_Quantity__c</fullName>
        <label>Moved Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Manufacturing Run Inventory Location</label>
    <nameField>
        <displayFormat>MRIL-{00000}</displayFormat>
        <label>Manufacturing Run Inventory Location Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manufacturing Run Inventory Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>